<resources>
    <string name="app_name">Quiz App</string>
    
    <!-- Common Strings -->
    <string name="welcome">Welcome to Quiz App!</string>
    <string name="loading">Loading...</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="retry">Try Again</string>
    
    <!-- Auth Strings -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    
    <!-- Quiz Strings -->
    <string name="question_format">Question %1$d/%2$d</string>
    <string name="score_format">Score: %1$d/%2$d</string>
    <string name="time_remaining">Time: %1$ds</string>
    <string name="results_title">Quiz Results</string>
    <string name="correct_answers">Correct: %1$d</string>
    <string name="wrong_answers">Wrong: %1$d</string>
    
    <!-- Error Messages -->
    <string name="error_invalid_email">Please enter a valid email</string>
    <string name="error_short_password">Password must be at least 6 characters</string>
    <string name="error_select_answer">Please select an answer</string>
</resources>